# File_backup_System

./: CMakeLists.txt  DFBMS  LICENSE  README.md  build.sh  main.cpp
core/: Semaphore.h  backupmanager.cpp
src/UI/: LineChartWidget.cpp  LineChartWidget.h  MainWindow.cpp  MainWindow.h
src/client/: BackupRequest.h  Client.cpp  Client.h  ClientSimulator.cpp  ClientSimulator.h  IClient.h
src/core/: Semaphore.h  backupmanager.cpp  backupmanager.h
